feat: 重构组织管理模块，更新组织编码字段并添加相关测试数据